--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8" />
-  <title> The Best Project fghfhtfthhtfht </title>
+  <title> The Best Project</title>
   <link href="styles/style.css" rel="stylesheet" type="text/css" />
 </head>
 
