create project structure; add header, body;

--- a/index.html
+++ b/index.html
@@ -1,64 +1,72 @@
 <!DOCType htlm>
 <html lang="ru">
+
 <head>
   <meta charset="utf-8" />
-  <title> The Best Project</title>
-  <link href="styles/style.css" rel="stylesheet" type="text/css" />
+  <title> A First Project</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
   <header>
-    <h1> GRAPHIC DESIGN </h1>
-    
+    <div class="header">
+      <div class="button-menu"> <img  src="images/button-menu.png"> </div> 
+      <div class="header-wrapper">
+        <img class="logo" src="images/logo.png" >
+        <div class="empty"> </div> 
+        <div class="nav">
+          <a href="#">Home</a>
+          <a href="#">About</a>
+          <a href="#">Blog</a>
+          <a href="#">Event</a>
+          <a href="#">Contact</a>
+        </div>
+     </div>
+    </div>
   </header>
-   <main>
-    <!-- <img src="images/layers.png" alt="layers.png" /> -->
-    <img class="logo" src="images/logo.png" alt="" />
+  <main>
+    <div class="left-side">
+    <p><a class="title"> GRAPHIC DESIGN </a> </p>
+    <p><h3> VIRTUAL FEST </h3> </p>
+    <!-- <img src="images/layers.png" alt="layers.png" />
     <input src="images/recta-494.png" />
-    <nav>
-      <ul>
-        <l><a class="class-1 font" href="#">Home</a></l>
-        <l><a class="class-2 font" href="#">About</a></l>
-        <l><a class="class-1 class-2" href="#">Blog</a></l>
-        <l><a href="#">Event</a></l>
-        <lright><a class="font" href="#">Contact</a></lright>
-      </ul>
-    </nav>
-    <!-- <div> -->
       <h2>THE BIGGEST
         VIRTUAL FESTIVAL
-        IN THE WORLD
-        <!-- <div> -->
-          <!-- <div> -->
-            <!-- <img class="image-item__image-2c" src="https://avatars.dzeninfra.ru/get-zen_doc/5218824/pub_6353fb13c7d33c7ad1d5fbc1_635d108eea780a09c36cbac9/scale_2400" 
-                  style="width: 796px; height: 447.75px; opacity: 1; background-color: rgb(80, 16, 16); transform: scale(1); transition: none 0s ease 0s;"> -->
-            <!-- <img src="images/ellipse_532.png" alt="ellipse_532.png" /> -->
-            <!-- <section> -->
-            <!-- <screen> -->
-            <img src="images/vector-smart-533.png" alt="" />
-            <!-- </screen> -->
-            <!-- </section> -->
-            <!-- <div> -->
-            <img src="images/ellipse-532.png" alt="ellipse_532.png" />
-            <!-- <div> -->
-            <img src="images/vector-blue-555.png" alt="vector_smart_object_.png" />
-          <!-- </div> -->
-        <!-- </div> -->
-      </h2>
+        IN THE WORLD -->
+            <!-- <img src="images/ellips-corner.png" alt="" /> -->
+            <!-- <img src="images/ellipse-big.png" alt="ellipse_532.png" /> -->
+            <!-- <img class="left-oval" src="images/left-oval.png" alt="vector_smart_object_.png" /> -->
+         <!-- <img src="images/layers.png" alt="layers.png" />
+       </h2>
       <h3> +1000 Artworks | Over 150 Speakers </h3>
-    <!-- </div> -->
     <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
       magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel
       facilisis.
     </p>
-    <!-- </div> -->
-    <!-- </div> -->
     <input type="submit" value="Get Now" />
     <img class="lines3" src="images/rect-494.png" />
-    <img class="bottom" src="images/rect-495.png" />
-  
+    <img class="bottom" src="images/rect-495.png" /> -->
+  </div>
+  <div class="right-side">
+    <p><a class="right-title"> THE BIGGEST
+      VIRTUAL FESTIVAL
+      IN THE WORLD </a> </p>
+    <p><a class="right-h2"> +1000 Artworks | Over 150 Speakers </a> </p>
+    <p><a class="right-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+      labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan 
+      lacus vel facilisis.</a></p>
+      <input type="submit" value="Get Now" 
+      <img class="button" src="images/bottom.png" /> />
+      <!-- <img class="bottom" src="images/rect-495.png" />   -->
+  </div>
+  <div class="right-button">
+    <img class="button-ring" src="images/instagram.png" /> 
+    <img class="button-ring" src="images/facebook.png" /> 
+    <img class="button-ring" src="images/twitter.png" /> 
+    <img class="button-ring" src="images/whatsapp.png" />
+  </div>
   </main>
-  
-  </body>
+
+</body>
 
 </html>
