fixed across the list

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
   <header>
     <div class="header">
-      <div class="button-menu"> <img  src="images/button-menu.png"> </div> 
+      <div class="button-menu"> <img src="images/button-menu.png"> </div>
       <div class="header-wrapper">
-        <img class="logo" src="images/logo.png" >
-        <div class="empty"> </div> 
+        <img class="logo" src="images/logo.png">
+        <div class="empty"> </div>
         <div class="nav">
           <a href="#">Home</a>
           <a href="#">About</a>
@@ -21,50 +21,36 @@
           <a href="#">Event</a>
           <a href="#">Contact</a>
         </div>
-     </div>
+      </div>
     </div>
   </header>
   <main>
     <div class="left-side">
-    <p><a class="title"> GRAPHIC DESIGN </a> </p>
-    <p><h3> VIRTUAL FEST </h3> </p>
-    <!-- <img src="images/layers.png" alt="layers.png" />
-    <input src="images/recta-494.png" />
-      <h2>THE BIGGEST
+      <p class="title"> GRA
+        PHIC
+        DES
+        IGN </p>
+      <p>
+      <h2> VIRTUAL FEST </h2>
+      </p>
+    </div>
+    <div class="right-side">
+      <p class="right-side-title"> THE BIGGEST
         VIRTUAL FESTIVAL
-        IN THE WORLD -->
-            <!-- <img src="images/ellips-corner.png" alt="" /> -->
-            <!-- <img src="images/ellipse-big.png" alt="ellipse_532.png" /> -->
-            <!-- <img class="left-oval" src="images/left-oval.png" alt="vector_smart_object_.png" /> -->
-         <!-- <img src="images/layers.png" alt="layers.png" />
-       </h2>
-      <h3> +1000 Artworks | Over 150 Speakers </h3>
-    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-      magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel
-      facilisis.
-    </p>
-    <input type="submit" value="Get Now" />
-    <img class="lines3" src="images/rect-494.png" />
-    <img class="bottom" src="images/rect-495.png" /> -->
-  </div>
-  <div class="right-side">
-    <p><a class="right-title"> THE BIGGEST
-      VIRTUAL FESTIVAL
-      IN THE WORLD </a> </p>
-    <p><a class="right-h2"> +1000 Artworks | Over 150 Speakers </a> </p>
-    <p><a class="right-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-      labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan 
-      lacus vel facilisis.</a></p>
-      <input type="submit" value="Get Now" 
-      <img class="button" src="images/bottom.png" /> />
-      <!-- <img class="bottom" src="images/rect-495.png" />   -->
-  </div>
-  <div class="right-button">
-    <img class="button-ring" src="images/instagram.png" /> 
-    <img class="button-ring" src="images/facebook.png" /> 
-    <img class="button-ring" src="images/twitter.png" /> 
-    <img class="button-ring" src="images/whatsapp.png" />
-  </div>
+        IN THE WORLD </p>
+      <p class="right-side-h2"> +1000 Artworks | Over 150 Speakers </p>
+      <p class="right-side-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+        incididunt ut
+        labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan
+        lacus vel facilisis. </p>
+      <button type="right-side-submit" > Get Now </button>
+    </div>
+    <div class="right-button">
+      <img class="right-button-ring" src="images/instagram.png" />
+      <img class="right-button-ring" src="images/facebook.png" />
+      <img class="right-button-ring" src="images/twitter.png" />
+      <img class="right-button-ring" src="images/whatsapp.png" />
+    </div>
   </main>
 
 </body>
