--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="button-menu"> <img src="images/button-menu.png"> </div>
       <div class="header-wrapper">
         <img class="logo" src="images/logo.png">
-        <div class="empty"> </div>
+        <!-- <div class="empty"> </div> -->
         <div class="nav">
           <a href="#">Home</a>
           <a href="#">About</a>
@@ -26,23 +26,15 @@
   </header>
   <main>
     <div class="left-side">
-      <p class="title"> GRA
-        PHIC
-        DES
-        IGN </p>
-      <p>
+      <h1 class="title"> GRAPHIC DESIGN </h1>
       <h2> VIRTUAL FEST </h2>
-      </p>
-    </div>
+      </div>
     <div class="right-side">
-      <p class="right-side-title"> THE BIGGEST
-        VIRTUAL FESTIVAL
-        IN THE WORLD </p>
+      <p class="right-side-title"> THE BIGGEST VIRTUAL FESTIVAL IN THE WORLD </p>
       <p class="right-side-h2"> +1000 Artworks | Over 150 Speakers </p>
       <p class="right-side-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-        incididunt ut
-        labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan
-        lacus vel facilisis. </p>
+        incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra 
+        maecenas accumsan lacus vel facilisis. </p>
       <button type="right-side-submit" > Get Now </button>
     </div>
     <div class="right-button">
