удалены комментарии, форматированы тексты

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
         maecenas accumsan lacus vel facilisis. </p>
       <button type="right-side-submit" > Get Now </button>
     </div>
-    <div class="right-button">
-      <img class="right-button-ring" src="images/instagram.png" />
-      <img class="right-button-ring" src="images/facebook.png" />
-      <img class="right-button-ring" src="images/twitter.png" />
-      <img class="right-button-ring" src="images/whatsapp.png" />
+    <div class="social-wrapper">
+      <img class="social" src="images/instagram.png" />
+      <img class="social" src="images/facebook.png" />
+      <img class="social" src="images/twitter.png" />
+      <img class="social" src="images/whatsapp.png" />
     </div>
   </main>
 
